Fix order detail modal on mobile

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -783,6 +783,10 @@ video {
   max-height: 100%;
 }
 
+.max-h-\[90vh\] {
+  max-height: 90vh;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -833,6 +837,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-\[75\%\] {
+  max-width: 75%;
 }
 
 .flex-grow {
@@ -1361,6 +1369,10 @@ video {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:max-w-\[75\%\] {
+    max-width: 75%;
   }
 
   .md\:grid-cols-2 {
